# yafti

./: .example.pypirc  .gitignore  .python-version  CHANGELOG.md  Containerfile  Containerfile.fed  README.md  devbox.json  distrobox.ini  example.yml  justfile  mkdocs.yml  pyproject.toml  yaftibox.ini
.github/workflows/: ci.yml  lint.yml  release-please.yml  release.yml  unit.yml
docs/: README.md  contributing.md  generate_reference.py  index.md  reference.md
pkg/: PKGBUILD  rpm.spec
tests/: bazzite.yaml  bluefin.yml  example-final-screen.yml  example-multi-package.yml  example-save-state.yml  example-system.yml  example.yml  test_plugin_run.py  test_screen_package_state.py  test_screen_package_utils.py
yafti/: __init__.py  __main__.py  abc.py  app.py  const.py  events.py  gi.py  gresource.gresource  gresource.xml  gschemas.compiled  log.py  org.ublue-os.yafti.gschema.xml  parser.py  registry.py  settings.py  setup.py  share.py  state.py  utils.py
yafti/assets/: bazzite.webm
yafti/assets/css/: application.css
yafti/cli/: __main__.py  main.py
yafti/core/: __init__.py  abc.py  apply.py  collections.py  config.py  finished.py  log.py  registry.py  state.py  tasks.py
yafti/gtk/: confirm.ui  console.ui  progress.ui  test.ui  title.ui  tour.ui  utils.py  window.ui
yafti/gtk/screens/: main.ui
yafti/layouts/: __init__.py
yafti/plugin/: flatpak.py  run.py
yafti/plugins/: __init__.py  flatpak.py  run.py
yafti/screen/: about.py  collections.py  consent.py  console.py  content.py  dialog.py  package.py  settings.py  sidebar.py  title.py  utils.py  window.py
yafti/screen/assets/: consent.ui  console.ui  dialog.ui  gresource.gresource  gresource.xml  gschemas.compiled  it.ublue.yafti.gschema.xml  org.gtk.py.yafti.gschema.xml  packages.ui  shortcuts.ui  window.ui
yafti/screen/package/: __init__.py  models.py  state.py  utils.py
yafti/screen/package/screen/: __init__.py  install.py  package.py  picker.py
yafti/views/: __init__.py  about.py  confirm.py  consent.py  console.py  content.py  dialog.py  install.py  package.py  picker.py  search.py  settings.py  sidebar.py  title.py  tour.py
yafti/windows/: dialog.py  window.py
