[tool.poetry]
name = "yafti"
version = "0.2.8"
description = "Yet another first time installer"
authors = ["Marco Ceppi <marco@ceppi.net>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/ublue-os/yafti"
repository = "https://github.com/ublue-os/yafti"
classifiers = [
    "Environment :: X11 Applications :: GTK",
    "Framework :: AsyncIO",
    "Intended Audience :: End Users/Desktop",
    "Topic :: System :: Software Distribution",
]

[tool.poetry.scripts]
yafti = "yafti.__main__:run"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "1.10.2"  # This needs to match the minimum supported version in Fedora
pygobject = "^3.42.2"
pyyaml = "^6.0"
gbulb = "^0.6.4"

[tool.poetry.plugins."yafti.plugin"]
"yafti.plugin.flatpak" = "yafti.plugin.flatpak:Flatpak"
"yafti.plugin.run" = "yafti.plugin.run:Run"
"run" = "yafti.plugin.run:Run"

[tool.poetry.plugins."yafti.screen"]
"yafti.screen.title" = "yafti.screen.title:TitleScreen"
"yafti.screen.package" = "yafti.screen.package:PackageScreen"
"yafti.screen.console" = "yafti.screen.console:ConsoleScreen"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.1"
ruff = "^0.0.254"
coverage = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
