[tool.poetry]
name = "yafti"
version = "0.10.0"
description = "Yet another first time installer"
authors = ["Marco Ceppi <marco@ceppi.net>"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/ublue-os/yafti"
repository = "https://github.com/ublue-os/yafti"
classifiers = [
    "Environment :: X11 Applications :: GTK",
    "Framework :: AsyncIO",
    "Intended Audience :: End Users/Desktop",
    "Topic :: System :: Software Distribution",
]

[tool.poetry.scripts]
yafti = "yafti.__main__:app"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
pygobject = "^3.42.2"
pyyaml = "^6.0"
gbulb = "^0.6.4"
rich = "^13.3.2"
typer = ">=0.7,<0.10"

[tool.poetry.plugins."yafti.plugin"]
"yafti.plugin.flatpak" = "yafti.plugin.flatpak:Flatpak"
"yafti.plugin.run" = "yafti.plugin.run:Run"
"run" = "yafti.plugin.run:Run"

[tool.poetry.plugins."yafti.screen"]
"yafti.screen.title" = "yafti.screen.title:TitleScreen"
"yafti.screen.package" = "yafti.screen.package:PackageScreen"
"yafti.screen.console" = "yafti.screen.console:ConsoleScreen"
"yafti.screen.consent" = "yafti.screen.consent:ConsentScreen"

[tool.poetry.group.dev.dependencies]
black = ">=23.1,<25.0"
isort = "^5.12.0"
pytest = ">=7.2.1,<9.0.0"
ruff = ">=0.0.254,<0.3.5"
coverage = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-asyncio = ">=0.20.3,<0.24.0"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
